- added RecordState to WCellRecord to avoid deleting of already deleted records
- fixed double shots of physical abilities that apply School damage