@@ -1,2 +1,3 @@
-- added RecordState to WCellRecord to avoid deleting of already deleted records
-- fixed double shots of physical abilities that apply School damage
+- fixed a bug where charming/taming interrupted itself
+- fixed a bug with constraint checks of dependent auras
+- fixed another bug with any ModCritPercent spell, such as Lethal Shot, to apply the correct crit bonus
